# discord-bot

./: .coverage  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  reports_config.json  requirements-dev.txt  requirements.txt  stock_alerts.json
discord_bot/: api.py  bitvavo_handler.py  bot.py  cog.py  config.py  kucoin_handler.py  kucoin_models.py  kucoin_websocket.py  logging_setup.py  portfolio_tracker.py  price_tracker.py  scheduled_reports.py  simple_cog.py  stock_alerts.py  stock_commands.py  test_binance.py  test_formula.py  trade_inspector.py  trading_commands.py
discord_bot/alerts/: __init__.py  alert_commands.py  alert_model.py  alert_monitor.py  alert_storage.py  cog.py  config_checker.py  readme.md  test_handler.py
discord_bot/api/: base.py  binance.py  binance_connector.py  bitvavo.py  financial.py  kucoin.py  prices.py  readme.md  request_utilities.py
discord_bot/legacy/: kucoin_handler.py
discord_bot/portfolio/: __init__.py  calculator.py  cog.py  commands.py  embed_builder.py  models.py  portfolio_storage.py  price_service.py  readme.md
discord_bot/price_tracker/: __init__.py  cog.py  commands.py  embed_builder.py  price_service.py  reaction_handler.py  readme.md  tracker_manager.py  tracker_model.py  tracker_storage.py
discord_bot/reports/: __init__.py  cog.py  commands.py  models.py  readme.md  report_generator.py  scheduler.py  storage.py
discord_bot/stocks/: __init__.py  cog.py  commands.py  (+1 more)
tests/: conftest.py
webapp/: bitvavo_fee_calculator.py  degiro_fee_calculator.py  kucoin_fee_calculator.py  readme.md
(+35 files in other folders)
