[tool.poetry]
name = "discord-bot"
version = "0.1.0"
description = ""
authors = ["Belg PC <tomsomoza911@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
discord-py = "^2.5.0"
requests = "^2.32.3"
polars = "^1.23.0"
python-bitvavo-api = "^1.4.2"
gradio = "^5.20.1"
matplotlib = "^3.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
